--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,9 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-shop-api
+swagger/*
 
+shop-api
+lastupdate.tmp
 # Dependency directories (remove the comment below to include it)
 # vendor/
