--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,9 @@ services:
       - .:/go/src/shop-api/
     depends_on: 
       - db-shop
+    environment:
+      driver: postgres
+      sqlconn: postgres://user:pass@db-shop:5432/db?sslmode=disable
   db-shop:
     image: postgres:12
     volumes:
