--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,16 @@
 version: '3'
 
 services:
+  swagger:
+    image: swaggerapi/swagger-ui
+    ports:
+      - 8080:8080
+    networks:
+      - api-shop
   api-shop:
     build: .
     ports:
-      - 8080:8080
+      - 8081:8081
     networks:
       - api-shop
     command: bee run -downdoc=true -gendoc=true
