--- a/conf/app.conf
+++ b/conf/app.conf
@@ -5,3 +5,7 @@ autorender = false
 copyrequestbody = true
 EnableDocs = true
 sqlconn = postgres://user:pass@db-shop:5432/db?sslmode=disable
+
+EnableAdmin = true
+AdminAddr = api-shop
+AdminPort = 8088
