--- a/.gitignore
+++ b/.gitignore
@@ -10,12 +10,15 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+*.tmp
+
+lastupdate*
 
 commentsRouter__________*
 coverage.html
 coverage/
 shop-api
-*.tmp
+
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
